--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite"
   },
-  "keywords": ["react","numberpad","react-numberpad","react-d-numberpad","numberpad"],
+  "keywords": [
+    "react",
+    "numberpad",
+    "react-numberpad",
+    "react-d-numberpad",
+    "numberpad"
+  ],
   "author": "Madhava Reddy B",
   "license": "ISC",
   "description": "A simple number pad component for react",
@@ -22,9 +29,11 @@
   "devDependencies": {
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "rollup": "^4.32.0",
     "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11"
   },
   "peerDependencies": {
     "react": "^19.0.0",
